# predictive-modeling-learning

./: .gitignore  README.md  pyproject.toml
src/predictive_modeling_learning/cli/: main.py  regression.py
src/predictive_modeling_learning/io/: csv_loader.py  db.py  db_loader.py  loaders.py  preprocessor.py  splitter.py
src/predictive_modeling_learning/models/: base.py  registry.py
src/predictive_modeling_learning/models/regression/: linear.py  polynomial.py
