[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predictive-modeling-learning"
version = "0.1.0"
description = "A CLI tool for learning predictive modeling techniques"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core data
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",

    # CLI
    "click>=8.1.0",

    # Models
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",    # ARIMA, exponential smoothing
    "torch>=2.0.0",           # neural networks, deep learning

    # Serialization
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",            # linting + formatting
    "mypy>=1.10.0",           # type checking
]

[project.scripts]
pml = "predictive_modeling_learning.cli.main:pml"

[tool.hatch.build.targets.wheel]
packages = ["src/predictive_modeling_learning"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]     # pycodestyle, pyflakes, isort

[tool.mypy]
python_version = "3.12"
strict = false               # flip to true later as the project matures

[tool.pytest.ini_options]
testpaths = ["tests"]